# Clock

./: CMakeLists.txt  README.md  SFMLWorldTime.cpp  main.cpp  Часы.sln  Часы.vcxproj  Часы.vcxproj.bak  Часы.vcxproj.filters
lib/: SFMLWorldTime.h
